improvement: moved SSN,TEN,RBE,RBE Name to top of form because it could be filled with GUS API

--- a/css/less/icons.less
+++ b/css/less/icons.less
@@ -687,7 +687,8 @@
 
 .lms-ui-icon-usergroup,
 .lms-ui-icon-ugroup,
-.lms-ui-icon-ug {
+.lms-ui-icon-ug,
+.lms-ui-icon-tag {
   .fa-icon;
   .fas;
   .lms-ui-icon;
