--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -81,6 +81,10 @@
 										{trans("and")}
 									</label>
 									<label>
+										<input type="checkbox" name="printcustomerssn" value="1">
+										{trans("hide customer SSN")}
+									</label>
+									<label>
 										<INPUT class="radio" type="radio" value="OR" name="sk"{if $sk=='OR'} checked{/if}>
 										{trans("or")}
 									</label>
