bugfix: fixed typo

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -550,7 +550,7 @@
 	<thead>
 		<tr>
 			<th scope="col">
-				{icon nmae="money"}
+				{icon name="money"}
 			</th>
 			<th scope="col" class="nobr">
 				<strong>{trans("Sale Registry")}</strong>
