--- a/templates/default/customer/customermessages.html
+++ b/templates/default/customer/customermessages.html
@@ -119,7 +119,7 @@
 						{if $item.files}
 							{button class="toggle-file-list" type="link" icon="attachment" tip="Show file list" resourceid={$item.filecontainerid}}
 						{/if}
-						{button type="link" icon="delete" class="delete-message" href="?m=messagedel&id={$item.id}"
+						{button type="link" icon="delete" class="delete-message" href="?m=messagedel&id={$item.id}&customerid={$customerinfo.id}"
 							tip="Delete"}
 						{button type="link" icon="resend" href="?m=messageadd&customerid={$customerinfo.id}&messageid={$item.id}" tip="Resend"}
 						<input type="checkbox" class="lms-ui-multi-check" name="marks[{$item.id}]" value="{$item.id}"
