--- a/templates/default/event/eventinfoshort.html
+++ b/templates/default/event/eventinfoshort.html
@@ -21,7 +21,7 @@
             {icon name="timetable"}
         </TD>
         <TD class="bold">
-            {trans("Title:")}
+            {trans("Title")}
         </TD>
         <TD class="bold">
             {$event.title|escape}
@@ -34,7 +34,7 @@
             {icon name="uptime"}
         </TD>
         <TD class="bold nobr">
-            {trans("Begin time:")}
+            {trans("Begin time")}
         </TD>
         <TD>
             {$event.date|date_format:"%x (%A)"}
@@ -47,7 +47,7 @@
                 {icon name="uptime"}
             </TD>
             <TD class="bold nobr">
-                {trans("End time:")}
+                {trans("End time")}
             </TD>
             <TD>
                 {if $event.enddate}
@@ -66,7 +66,7 @@
                 {icon name="description"}
             </TD>
             <TD class="bold nobr">
-                {trans("Description:")}
+                {trans("Description")}
             </TD>
             <TD>
                 <div class="fall superlight eventinfoshort-textbox">
@@ -80,7 +80,7 @@
             {icon name="type"}
         </TD>
         <TD class="bold">
-            {trans("Type:")}
+            {trans("Type")}
         </TD>
         <TD class="nobr">
             {$_EVENTTYPES[$event.type]}
@@ -91,7 +91,7 @@
             {icon name="status"}
         </TD>
         <TD class="bold">
-            {trans("Availability:")}
+            {trans("Availability")}
         </TD>
         <TD class="nobr">
             {if $event.private}{trans("private")}{else}{trans("public")}{/if}
@@ -102,7 +102,7 @@
             {icon name="user"}
         </TD>
         <TD class="bold">
-            {trans("Created by:")}
+            {trans("Created by")}
         </TD>
         <TD class="nobr">
             <A href="?m=userinfo&id={$event.userid}">{$event.username|escape}</A>
@@ -114,7 +114,7 @@
                 {icon name="uptime"}
             </TD>
             <TD class="bold">
-                {trans("Creation time:")}
+                {trans("Creation time")}
             </TD>
             <TD>
                 {$event.creationdate|date_format:"%x (%X)"}
@@ -127,7 +127,7 @@
                 {icon name="user"}
             </TD>
             <TD class="bold">
-                {trans("Last modified by:")}
+                {trans("Last modified by")}
             </TD>
             <TD class="nobr">
                 <A href="?m=userinfo&id={$event.moduserid}">{$event.modusername|escape}</A>
@@ -140,7 +140,7 @@
                 {icon name="uptime"}
             </TD>
             <TD class="bold">
-                {trans("Last modification time:")}
+                {trans("Last modification time")}
             </TD>
             <TD>
                 {$event.moddate|date_format:"%x (%X)"}
@@ -179,7 +179,7 @@
 	        {icon name="customer"}
         </TD>
         <TD class="valign-top bold">
-            {trans("Customer:")}
+            {trans("Customer")}
         </TD>
         <TD class="nobr">
             <A href="?m=customerinfo&id={$event.customerid}">
@@ -204,7 +204,7 @@
             {icon name="location"}
         </TD>
         <TD class="bold">
-            {trans("Location:")}
+            {trans("Location")}
         </TD>
         <TD class="nobr">
         {if $event.netnode_name}
@@ -230,7 +230,7 @@
                 {icon name="node"}
             </TD>
             <TD class="bold">
-                {trans("Node:")}
+                {trans("Node")}
             </TD>
             <TD class="nobr">
                 <a href="?m=nodeinfo&id={$event.nodeid}">{$event.node_name}: {$event.node_location|escape}</a>
@@ -243,7 +243,7 @@
                 {icon name="note"}
             </TD>
             <TD class="bold nobr">
-                {trans("Note:")}
+                {trans("Note")}
             </TD>
             <TD>
                 <div class="fall superlight eventinfoshort-textbox">
@@ -258,11 +258,11 @@
                 {icon name="user"}
             </TD>
             <TD class="bold">
-                {trans("Users:")}
+                {trans("Users")}
             </TD>
             <TD class="nobr">
-                {foreach $event.userlist as $userid}
-                    <A href="?m=userinfo&id={$userid}">{$userlist[$userid].rname|escape}</A><BR>
+                {foreach $event.userlist as $idx => $rname}
+                    <a href="?m=userinfo&id={$idx}">{$rname|escape}</a><br>
                 {/foreach}
             </TD>
         </TR>
@@ -273,7 +273,7 @@
                 {icon name="helpdesk"}
             </TD>
             <TD class="bold">
-                {trans("Helpdesk assignment:")}
+                {trans("Helpdesk assignment")}
             </TD>
             <TD>
 		    <a href="?m=rtticketview&id={$event.ticketid}">#{$event.ticketid}</a> ({$_RT_STATES[$event.ticket.state].label})
