--- a/templates/default/event/eventnote.html
+++ b/templates/default/event/eventnote.html
@@ -117,8 +117,8 @@
 					<strong>{trans("Users")}</strong>
 				</td>
 				<td class="nobr">
-					{foreach $event.userlist as $user}
-						<a href="?m=userinfo&id={$user.id}">{$user.name|escape}</a>
+					{foreach $event.userlist as $userid => $user}
+						<a href="?m=userinfo&id={$userid}">{$user.rname|escape}</a>
 						{if !$user@last}
 							<br>
 						{/if}
