bugfix: added missed form block closing element (LMS+ fixes #2116)

--- a/templates/default/print/printindex.html
+++ b/templates/default/print/printindex.html
@@ -1192,7 +1192,7 @@
 	</TR>
     </TBODY>
 </TABLE>
-</>
+</form>
 {/if}
 {if $printmenu=="incomereport" || $printmenu=="finances"}
 <FORM method="post" name="printincomereport" id="printincomereport" action="?m=print&type=incomereport">
