--- a/templates/default/division/divisionedit.html
+++ b/templates/default/division/divisionedit.html
@@ -31,7 +31,7 @@
 			</td>
 			<td>
 				<input type="text" name="division[shortname]" value="{$division.shortname|escape}" size="40"
-					{tip text="Enter division short name" trigger="shortname" bold=1}>
+					{tip text="Enter division short name" trigger="shortname" bold=1} required>
 			</td>
 		</tr>
 	</thead>
