--- a/templates/default/rt/rtsearch.html
+++ b/templates/default/rt/rtsearch.html
@@ -79,6 +79,15 @@
 								{tip text="Select customer from list or enter his data if is not a customer"}>
 						</td>
 					</tr>
+					<tr>
+						<td>
+							{trans("Phone")}
+						</td>
+						<td>
+							<input type="tel" name="search[phone]" value="{$search.phone}" form="search"
+								{tip text="Select customer from list or enter his data if is not a customer"}>
+						</td>
+					</tr>
 				</table>
 			</td>
 		</tr>
