enhancement: implemented 'year' filter in invoice and balance lists

--- a/templates/default/invoice/invoicelist.html
+++ b/templates/default/invoice/invoicelist.html
@@ -98,6 +98,7 @@
 						<option value=""{if $listdata.cat == ""} selected{/if}>{trans("- select filter category -")}</option>
 						<option value="cdate"{if $listdata.cat == "cdate"} selected{/if}>{trans("day (YYYY/MM/DD)")}</option>
 						<option value="month"{if $listdata.cat == "month"} selected{/if}>{trans("month (YYYY/MM)")}</option>
+						<option value="year"{if $listdata.cat == "year"} selected{/if}>{trans("year (YYYY)")}</option>
 						<option value="number"{if $listdata.cat == "number"} selected{/if}>{trans("number")}</option>
 						<option value="value"{if $listdata.cat == "value"} selected{/if}>{trans("value")}</option>
 						<option value="name"{if $listdata.cat == "name"} selected{/if}>{trans("customer name")}</option>
