bugfix: allow to clear customer group selection between customer search form submits

--- a/templates/default/customer/customersearch.html
+++ b/templates/default/customer/customersearch.html
@@ -607,6 +607,7 @@
 				{trans("negation")}
 			</label>
 			&nbsp;
+			<input type="hidden" name="g" value="all">
 			<select size="1" name="g[]" multiple class="lms-ui-multiselect">
 				<option value=""{if ! is_array($listdata.customergroup) && !$listdata.customergroup} selected{/if}
 					data-exclusive>{trans("- all groups -")}</option>
