--- a/templates/default/document/documentlist.html
+++ b/templates/default/document/documentlist.html
@@ -218,6 +218,9 @@
 		</TD>
 		<TD class="nobr" onclick="window.open('?m=documentview&amp;id={$doc.docid}');">
 			{$doc.title|truncate:40:"&hellip;":true}
+			{if $doc.description}
+				{hint icon="info" content=$doc.description|escape|replace:"\n":'<br>'}
+			{/if}
 			{if $doc.fromdate || $doc.todate}<BR>
 			    {if $doc.fromdate}{trans("from")} {$doc.fromdate|date_format:"%Y/%m/%d"}{/if}
 			    {if $doc.todate}{trans("to")} {$doc.todate|date_format:"%Y/%m/%d"}{/if}
