enhancement: toggle view of documents related to invoices

--- a/css/templates/customer/customerbalancebox.less
+++ b/css/templates/customer/customerbalancebox.less
@@ -53,4 +53,27 @@
 			margin-left: 0.8em;
 		}
 	}
+
+	.all-attachment-view {
+		display: none;
+		padding-right: 0.3em;
+	}
+
+	.document-list {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.document-attachment-list {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.document-title {
+		text-decoration: underline dotted;
+	}
+
+	.document-title > a {
+		text-decoration: underline dotted;
+	}
 }
