--- a/templates/default/invoice/invoicelist.html
+++ b/templates/default/invoice/invoicelist.html
@@ -28,6 +28,29 @@
 		padding-left: 0.8em;
 	}
 
+	.all-attachment-view {
+		display: none;
+		padding-right: 0.3em;
+	}
+
+	.document-list {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.document-attachment-list {
+		display: flex;
+		flex-direction: column;
+	}
+
+	.document-title {
+		text-decoration: underline dotted;
+	}
+
+	.document-title > a {
+		text-decoration: underline dotted;
+	}
+
 </style>
 
 <script>
@@ -329,7 +352,43 @@
 				{/if}
 				{button type="link" icon="print" tip="Print" class="print-invoice" href="?m=invoice&id={$invoice.id}"}
 			{/if}
+			{if !empty($invoice.refdocs)}
+				{button type="link" icon="more" class="all-attachment-toggle" tip="related documents"}
+			{/if}
 			<INPUT TYPE="checkbox" NAME="marks[{$invoice.id}]" VALUE="{$invoice.id}" class="lms-ui-multi-check"{if $marks.$invoiceid} checked{/if}>
+			{if !empty($invoice.documentreferenced)}
+				<div class="all-attachment-view">
+					{foreach $invoice.refdocs as $docid => $refdoc}
+						<div class="document-list">
+							{if count($refdoc.attachments) == 1}
+								<div class="document-title">
+									{$attachment = reset($refdoc.attachments)}
+									{$attachmentid = key($refdoc.attachments)}
+									{capture assign="attachment_text"}{t a=$_DOCTYPES[$refdoc.type] b=$refdoc.fullnumber c=$refdoc.cdate|date_format:"%Y/%m/%d"}$a no. $b issued on $c{/t}{/capture}
+									{documentview id="{$docid}-{$attachmentid}" type=$attachment.contenttype name=$attachment.filename
+										url="?m=documentview&id={$docid}&attachmentid={$attachmentid}" external=true
+										text="{$attachment_text} <i class=\"lms-ui-icon-view{if preg_match('/pdf/',$attachment.contenttype)} pdf{elseif preg_match('/csv|excel|spreadsheet/',$attachment.contenttype)} xls{/if}\"></i>"}
+									{if $attachment.type == -1}<i class="lms-ui-icon-user" title="<strong>{t a=date("Y/m/d H:i", $attachment.cdate)}Sent by customer at $a{/t}</strong>"></i>{/if}
+								</div>
+							{else}
+								<div class="document-title">
+									{t a=$_DOCTYPES[$refdoc.type] b=$refdoc.fullnumber c=$refdoc.cdate|date_format:"%Y/%m/%d"}$a no. $b issued on $c{/t}
+								</div>
+								<div class="document-attachment-list">
+									{foreach $refdoc.attachments as $attachmentid => $attachment}
+										<div class="document-attachment">
+											{documentview id="{$docid}-{$attachmentid}" type=$attachment.contenttype name=$attachment.filename
+												url="?m=documentview&id={$docid}&attachmentid={$attachmentid}" external=true
+												text="{$attachment.filename} <i class=\"lms-ui-icon-view{if preg_match('/pdf/',$attachment.contenttype)} pdf{elseif preg_match('/csv|excel|spreadsheet/',$attachment.contenttype)} xls{/if}\"></i>"}
+											{if $attachment.type == -1}<i class="lms-ui-icon-user" title="<strong>{t a=date("Y/m/d H:i", $attachment.cdate)}Sent by customer at $a{/t}</strong>"></i>{/if}
+										</div>
+									{/foreach}
+								</div>
+							{/if}
+						</div>
+					{/foreach}
+				</div>
+			{/if}
 		</TD>
 	</TR>
 	{foreachelse}
@@ -643,6 +702,14 @@
 
 	$('#duplicate-checkbox').click(function () {
 		$('#duplicate-box-date-selector').toggle($(this).prop('checked'));
+	});
+
+	$(function() {
+		$('.all-attachment-toggle').click(function() {
+			var attachmentView = $(this).siblings('.all-attachment-view');
+			attachmentView.toggle();
+			$(this).find('i').attr('class', 'lms-ui-icon-' + (attachmentView.is(':visible') ? 'less' : 'more'));
+		});
 	});
 
 </script>
